[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/CheckpointZone/CheckpointZone.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Entities/PlayerAreaNotifier/PlayerAreaNotifier.tscn" type="PackedScene" id=3]


[node name="CheckpointZone" type="ReferenceRect"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 16 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 8.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.941176, 1 )
text = "CHECK
POINT"
__meta__ = {
"_edit_lock_": true
}

[node name="AreaNotifier" parent="." instance=ExtResource( 3 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
border_color = Color( 0, 0.752941, 1, 1 )

[node name="Label" parent="AreaNotifier" index="1"]
visible = false

[node name="CheckpointSpawnPositon" type="ReferenceRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -24.0
margin_right = 12.0
rect_min_size = Vector2( 24, 24 )
rect_pivot_offset = Vector2( 12, 12 )
border_color = Color( 0, 1, 0.0745098, 1 )

[node name="SpawnPointLabel" type="Label" parent="CheckpointSpawnPositon"]
margin_right = 40.0
margin_bottom = 28.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
text = "Spawn
point"
__meta__ = {
"_edit_lock_": true
}
[connection signal="entered_area" from="AreaNotifier" to="." method="_on_AreaNotifier_entered_area"]

[editable path="AreaNotifier"]
